feat: Add removeWaystoneFromDatabase, getAllWaystones, getWaystonesByType to API, add a less confusing getWaystone method, add getWaystoneAt that accepts a BlockGetter